--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -41,6 +41,14 @@ nav{
 	width: 100%;
 	height: 100px;
 }
+header {
+	
+position: fixed;
+  top: 0;
+  /* width: 100% */
+  left: 0;
+  right: 0;
+}
 
 .menu {
 	width: 100%;
