--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -17,7 +17,7 @@ body {
 .login_box {
 	position: relative;
 	top: 150px;
-	width: 500px;
+	width: 700px;
 	border: 1px solid #C6C6C6;
 	border-radius: 5px;
 	margin: auto; /*중앙 정렬*/
@@ -70,16 +70,36 @@ body {
 	gap: 10px; /*간격 벌려줄때 공식처럼 사용핟나 */
 }
 
-.login_btn {
-	margin-top: 50px;
-	margin-bottom: 30px;
-	margin-left: 300px;
-}
-
-
 
 #bir_yy, #bir_mm, #bir_dd {
-	width: 160px;
 	display: table-cell
 }
 
+#bir_mm {
+	padding: 20px;
+}
+
+.msg_box {
+	color: red;
+}
+
+.login_btn {
+	padding: 0.6em 1em;
+	border-radius: 0.25em;
+	border: gray;
+	font-weight: 400;
+	background-color: #A6A6A6;
+	color: white;
+	margin-bottom: 20px;
+}
+
+.back {
+	padding: 0.6em 1em;
+	border-radius: 0.25em;
+	border: gray;
+	font-weight: 400;
+	background-color: #A6A6A6;
+	color: white;
+	margin-bottom: 50px;
+	margin-left: 150px;
+}
