--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -29,29 +29,27 @@ ul {
 	margin-bottom: 20px;
 }
 
-.input-area{
+.input-area {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	margin-bottom: 30px; 
+	margin-bottom: 30px;
 }
-
-
 
 .form-floating {
 	margin: 0 auto; /* 중앙 정렬을 위해 추가 */
 	margin-bottom: 20px;
 }
 
-button.btn-lg{
-    padding: 0.6em 1em;
-    border-radius: 0.25em;
-    border: gray;
-    font-weight: 400;
-    box-shadow: var(--shadow-1);
-    background-color: #209BF2;
-    color: white;
-    margin-bottom: 20px;
+button.btn-lg {
+	padding: 0.6em 1em;
+	border-radius: 0.25em;
+	border: gray;
+	font-weight: 400;
+	box-shadow: var(- -shadow-1);
+	background-color: #209BF2;
+	color: white;
+	margin-bottom: 20px;
 }
 
 .button-area {
@@ -60,7 +58,7 @@ button.btn-lg{
 	text-align: center;
 }
 
- .error_message {
+.error_message {
 	display: inline-block;
 	font-size: 12px;
 	line-height: 16px;
@@ -82,11 +80,9 @@ button.btn-lg{
 }
 
 .find {
-	justify-content: center;
-	align-items: center;
 	text-align: center;
-
-
+	margin-right: 45px;
+	margin-top: 50px;
 }
 
 .find_wrap li a {
