--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -13,53 +13,134 @@
     font-style: normal;
 }
 
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body, nav {
 	margin: 0;
 	padding: 0;
+	 font-family: 'LINESeedKR-Bd';
 }
-
-.hr {
-	color: #DB4433;
-	margin: 10px 0px;
-}
-
-button {
-	font-family: 'GangwonState';
-}
-
-a {
-	text-decoration: none;
-}
-
-.nav a, .cgv a{
-	color: #DB4433;
-}
-
-nav{
-	box-sizing: border-box;
-	text-transform: uppercase;
-	width: 100%;
-	height: 100px;
-}
-header {
+nav {
+	height: 150px;
 	
-position: fixed;
-  top: 0;
-  /* width: 100% */
-  left: 0;
-  right: 0;
+}
+
+li {
+	list-style: none;
+	float: left;
+	text-align: center;
 }
 
 .menu {
+	font-family: 'Noto Sans KR', sans-serif;
+	top: 0;
+	left: 0;
 	width: 100%;
-	height: 100px;
+	height: 150px;
 	position: fixed;
 	overflow: hidden;
 	box-sizing: border-box;
-	
+	background-color: white;
 }
 
-.menu_left {
+.menu hr {
+	border: 0.01em solid #A6A6A6;
+}
+
+.menu_header {
+	width: 100%;
+	height: 80px;
+}
+
+.header_logo {
+	width: 50%;
+	float: left;
+	display: grid;
+	padding-top: 18px;
+	padding-left: 70px;
+	box-sizing: border-box;
+	height: 100%;
+}
+
+.header_logo img {
+	height: 60px;
+}
+
+.header_warp {
+	width: 50%;
+	height: 100%;
+	float: right;
+}
+
+.aside {
+	padding-left: 150px;
+	padding-right: 30px;
+	padding-top: 5px;
+	box-sizing: border-box;
+}
+
+.aside_list {
+	display: flex;
+	justify-content: center; 
+	align-items: center;
+	height: 100%;
+}
+
+.aside li {
+	width: 120px;
+	height: 60px;
+	display: grid;
+}
+
+.aside_list .icon {
+	font-size: 30px;
+	font-weight: bolder;
+}
+
+.aside_list .text {
+	font-size: 13px;
+}
+
+.menu_nav {
+	height: 100%;
+}
+
+.menu_map {
+	width: 50%;
+	height: 50px;
+	line-height: 60px;
+	float: left;
+	padding-left: 70px;
+	box-sizing: border-box;
+}
+
+.menu_map .icon {
+	font-size: 25px;
+	font-weight: bolder;
+}
+
+.menu_warp {
+	width: 50%;
+	float: left;
+	padding-right: 30px;
+	box-sizing: border-box;
+}
+
+.menu_warp ul {
+	padding-left: 120px;
+	padding-right: 30px;
+	box-sizing: border-box;
+}
+.menu_warp li {
+	width: 80px;
+	height: 60px;
+	font-size: 14pt;
+	font-weight: 600;
+}
+
+
+
+/* .menu_left {
     font-family: 'GangwonState';
 	float: left;
 	width: 20%;
@@ -89,9 +170,7 @@ ul{
 }
 
 li {
-	list-style: none;
-	float: left;
-	text-align: center;
+	
 	width: 100px;
 	line-height: 100px;
 	display: inline;
@@ -123,3 +202,4 @@ li:hover {
 	color: #DB4433;
 	cursor: pointer;
 }
+ */
